add simple customer list, add, and remove
anyone can edit/improve them
I have not implement search yet; there's a link, template, and empty
function

--- a/CustomerData/templates/customer_list.html
+++ b/CustomerData/templates/customer_list.html
@@ -4,13 +4,15 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<h1>Customer Data</h1>
+<b>Customer List</b>
 </head>
 <body>
-	<ul>
-		<li><a href="{% url 'CustomerData:search_for_customer' %}" >Search</a></li>
-		<li><a href="{% url 'CustomerData:add_customer' %}">Add Customer</a></li>
-		<li><a href="{% url 'CustomerData:customer_list' %}">Lists of Customers</a></li>
-	</ul>
+{%for customer in object_list%}
+	<li>{{customer.first_name}}  {{customer.last_name}} : 
+		<a href="{% url 'CustomerData:remove_customer' customer.id %}">Remove</a>
+	</li>
+{%endfor%}
+
+<a href = "{% url 'CustomerData:index' %}"> back to index </a>
 </body>
 </html>
