--- a/CustomerData/templates/search_for_customer.html
+++ b/CustomerData/templates/search_for_customer.html
@@ -4,13 +4,15 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<h1>Customer Data</h1>
+<h1>Search for Customer</h1>
 </head>
 <body>
-	<ul>
-		<li><a href="{% url 'CustomerData:search_for_customer' %}" >Search</a></li>
-		<li><a href="{% url 'CustomerData:add_customer' %}">Add Customer</a></li>
-		<li><a href="{% url 'CustomerData:customer_list' %}">Lists of Customers</a></li>
-	</ul>
+
+<form action = "#" method = "post">
+	<input type = "text" name = "search"> 
+	{% csrf_token %}
+	<button type = "submit">Search</button> 
+</form>
+
 </body>
 </html>
