--- a/CustomerData/templates/CustomerData/index.html
+++ b/CustomerData/templates/CustomerData/index.html
@@ -6,11 +6,11 @@
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
 <body>
-<h1>Confirm</h1>
-	<form action="" method="post">
-		{% csrf_token %}
-		<p>Are you sure you want to delete "{{ object }}"?</p>
-    <input type="submit" value="Confirm" />
-</form>
+<h1>Customer Data</h1>
+	<ul>
+		<li><a href="{% url 'CustomerData:search_for_customer' %}" >Search</a></li>
+		<li><a href="{% url 'CustomerData:add_customer' %}">Add Customer</a></li>
+		<li><a href="{% url 'CustomerData:customer_list' %}">Lists of Customers</a></li>
+	</ul>
 </body>
 </html>
