--- a/CustomerData/templates/CustomerData/search_for_customer.html
+++ b/CustomerData/templates/CustomerData/search_for_customer.html
@@ -4,15 +4,14 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<h1>Search for Customer</h1>
 </head>
 <body>
-
-<form action = "#" method = "post">
-	<input type = "text" name = "search"> 
+<h1>Search for Customer</h1>
+<form name = "form" action = "." method = "POST">
 	{% csrf_token %}
-	<button type = "submit">Search</button> 
+	{{form}}
+	<button type = "submit" value="Submit">Search</button> 
 </form>
-
+	<a href="{% url 'CustomerData:index' %}">return to index</a>
 </body>
 </html>
