Update Customer Search
The search box only has one field;
Assuming the searches only contain one of these
"first_name last_name"
"last_name first_name"
"first_name"
"last_name"
and assuming the users won't input a single character because all the
Customers containing that character will be listed and they are not
listed in a way that the Customers starting with the inputed char will
appear first.

--- a/CustomerData/templates/CustomerData/customer_confirm_delete.html
+++ b/CustomerData/templates/CustomerData/customer_confirm_delete.html
@@ -9,7 +9,7 @@
 <h1>Confirm</h1>
 	<form action="" method="post">
 		{% csrf_token %}
-		<p>Are you sure you want to delete "{{ object }}"?</p>
+		<p>Remove "{{ object }}"?</p>
     <input type="submit" value="Confirm" />
 </form>
 </body>
