--- a/CustomerData/templates/CustomerData/customer_form.html
+++ b/CustomerData/templates/CustomerData/customer_form.html
@@ -1,16 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<h1>Add Customer</h1>
-</head>
-<body>
+{% extends 'CustomerData/base.html' %}
+
+{% block title %} Add Customer {% endblock %}
+
+{% block body %}
 	<!-- action = "" because will be redirected to the same view after django store the info into database
 		method indicates how to send the data from the form; 
 		"The form-data can be sent as URL variables (with method="get") or as HTTP post transaction (with method="post")."
 	-->
+    <h1>Add Customer</h1>
 	<form action="" method="post">
 		{% csrf_token %}
 		{% for field in form %}
@@ -20,6 +17,4 @@
 		</div>
 		{% endfor %}
 			<button type= "submit" class ="btn btn-info">Submit</button>
-	</form>
-</body>
-</html>
+{% endblock %}
