--- a/CustomerData/templates/CustomerData/customer_list.html
+++ b/CustomerData/templates/CustomerData/customer_list.html
@@ -1,18 +1,14 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-</head>
-<body>
-<h1>Customer List</h1>
-<ol>
-{%for customer in object_list%}
-	<li><a href="{% url 'CustomerData:detail' customer.id %}">{{customer.first_name}}  {{customer.last_name}}</a> --- <a href="{% url 'CustomerData:remove_customer' customer.id %}">Remove</a>
-	</li>
-{%endfor%}
-</ol>
-<a href = "{% url 'CustomerData:index' %}"> back to index </a>
-</body>
-</html>
+{% extends 'CustomerData/base.html' %}
+
+{% block title %} Customer List {% endblock %}
+
+{% block body %}
+    <h1>Customer List</h1>
+    <ol>
+    {%for customer in object_list%}
+        <li><a href="{% url 'CustomerData:detail' customer.id %}">{{customer.first_name}}  {{customer.last_name}}</a> --- <a href="{% url 'CustomerData:remove_customer' customer.id %}">Remove</a>
+        </li>
+    {%endfor%}
+    </ol>
+    <a href = "{% url 'CustomerData:index' %}"> back to index </a>
+{% endblock %}
