--- a/CustomerData/templates/CustomerData/detail.html
+++ b/CustomerData/templates/CustomerData/detail.html
@@ -1,12 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-</head>
-<body>
+{% extends 'CustomerData/base.html' %}
+
+{% block title %} Customer Details {% endblock %}
+
+{% block body %}
 <h1>Customer Details</h1>
 	<p>{{customer.first_name}}  {{customer.last_name}}</p>
-</body>
-</html>
+{% endblock %}
