--- a/CustomerData/templates/CustomerData/index.html
+++ b/CustomerData/templates/CustomerData/index.html
@@ -1,16 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-</head>
-<body>
+{% extends 'CustomerData/base.html' %}
+
+{% block title %} Customer Data {% endblock %}
+
+{% block body %}
 <h1>Customer Data</h1>
 	<ul>
 		<li><a href="{% url 'CustomerData:search_for_customer' %}" >Search</a></li>
 		<li><a href="{% url 'CustomerData:add_customer' %}">Add Customer</a></li>
 		<li><a href="{% url 'CustomerData:customer_list' %}">Lists of Customers</a></li>
 	</ul>
-</body>
-</html>
+{% endblock %}
