--- a/CustomerData/templates/CustomerData/search_results.html
+++ b/CustomerData/templates/CustomerData/search_results.html
@@ -1,11 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-</head>
-<body>
+{% extends 'CustomerData/base.html' %}
+
+{% block title %} Search Results {% endblock %}
+
+{% block body %}
 <h1>Search Results</h1>
 	{%for x in search_list%}
 		<li><a href="{% url 'CustomerData:detail' x.id %}">{{x}}</a> --- <a href="{% url 'CustomerData:remove_customer' x.id %}">Remove</a></li>
@@ -25,5 +22,4 @@
 		
 	<a href="{% url 'CustomerData:search_for_customer' %}">return to search</a>
 
-</body>
-</html>
+{% endblock %}
