Add checkboxes to remove
add checkboxes

--- a/CustomerData/templates/CustomerData/base.html
+++ b/CustomerData/templates/CustomerData/base.html
@@ -13,6 +13,9 @@
 			$(".linkrow").click(function() {
 				window.document.location = $(this).data("href");
 			});
+			$("#selectall").change(function(){
+				$(".remove").prop('checked', $(this).prop("checked"));
+			});
 		});
 	</script>
 </head>
