--- a/CustomerData/templates/CustomerData/index.html
+++ b/CustomerData/templates/CustomerData/index.html
@@ -3,7 +3,7 @@
 {% block title %} Customer Data {% endblock %}
 
 {% block body %}
-<h1>Customer Data</h1>
+<h1>Customer</h1>
 	<ul>
 		<li><a href="{% url 'CustomerData:search_for_customer' %}" >Search</a></li>
 		<li><a href="{% url 'CustomerData:add_customer' %}">Add Customer</a></li>
