--- a/CustomerData/templates/CustomerData/base.html
+++ b/CustomerData/templates/CustomerData/base.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"/>
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+	<script>
+	jQuery(document).ready(function($){
+			$(".linkrow").click(function() {
+				window.document.location = $(this).data("href");
+			});
+			$("#selectall").change(function(){
+				$(".remove").prop('checked', $(this).prop("checked"));
+			});
+		});
+	</script>
 </head>
 <body>
  <nav class="navbar navbar-inverse">
