--- a/CustomerData/templates/CustomerData/index.html
+++ b/CustomerData/templates/CustomerData/index.html
@@ -3,33 +3,27 @@
 {% block title %} Customer Data {% endblock %}
 
 {% block body %}
-<h1>Customer Data</h1>
-<div class="row container-fluid">
-	<div class = "col-md-1"></div>
-	<div class = "col-md-5">
-		<form name = "form1" action = "." method = "POST">
+<!-- Search, List, Add, Remove Buttons -->
+<div class="container-fluid s">
+		<form name = "form1" action = "." method = "POST" class= "ss">
 		{% csrf_token %}
 		{{search_form}}
 		<button type = "submit" name = "search_form" value = "search" class="btn btn-default">Search</button> 
 		</form>
-	</div>
-	<div class = "col-md-6"></div>
-</div>
-
-<!-- List, Add, Remove Buttons -->
-<div class = "row container-fluid">
-	<div class = "col-md-1"></div>
-	<div class = "col-md-11">
+		
+		<div class = "b1">
+				<a href="{% url 'CustomerData:index' %}"><button type = "submit" class = "btn btn-default">List</button></a>
 			
-			<a href="{% url 'CustomerData:index' %}"><button type = "submit" class = "btn btn-default">List</button></a>
-			
-			<button type="button" data-toggle="modal" data-target="#addForm" class="btn btn-default">Add</button>
-			
+				<button type="button" data-toggle="modal" data-target="#addForm" class="btn btn-default">Add</button>
+		</div>
+	
+		<div class = "b2">
 			<form name = "form3" id = "form3" action = "." method = "POST">
 				{% csrf_token %}
 				<button type = "submit" name = "remove_button" value = "remove" class= "btn btn-default">Remove</button>
 			</form>
-	</div>
+		</div>
+<hr width ="100%">
 </div>
 
 <!-- modal for Adding Customer -->
@@ -58,21 +52,20 @@
 </div>
 
 <!-- table list for customers -->
-<div class = "row container-fluid">
-	<div class = "col-md-1">
-	</div>
-	<div class = "col-md-10 checkbox tablew">
+<div class = "row container-fluid b">
+	<div class = "col-md-2"></div>
+	<div class = "col-md-8 checkbox tablew">
 	<table class = "table table-responsive table-hover">
 	<col width = "20">
 		<thead>
-			<th><input type = "checkbox" id="selectall" value=""/>select</th>
+			<th><label><input type = "checkbox" id="selectall" value=""/></label></th>
 			<th>First Name</th>
 			<th>Last Name</th>
 		</thead>
 		<tbody id = "list">
 			{% for customer in list %}
 			<tr style="cursor: pointer">
-					<td><input type = "checkbox" form = "form3" class="remove" value="{{customer.id}}" name = "items[]"/></td>
+					<td><label><input type = "checkbox" form = "form3" class="remove" value="{{customer.id}}" name = "items[]"/></label></td>
 					<td class = 'linkrow' data-href="{% url 'CustomerData:detail' customer.id %}" >{{customer.first_name}}</td>
 					<td class = 'linkrow' data-href="{% url 'CustomerData:detail' customer.id %}" >{{customer.last_name}}</td>
 			</tr>
@@ -80,32 +73,32 @@
 		
 			<!-- if User uses Search, these will replace the full list of Customers -->
 			{%for x in search_list%}
-			<tr class = 'linkrow' data-href="{% url 'CustomerData:detail' x.id %}" style="cursor: pointer">
-				<td><input type = "checkbox" class="remove" value="{{x.id}}" name = "items[]" form = "form3"/></td>
+			<tr style="cursor: pointer">
+				<td><label><input type = "checkbox" class="remove" value="{{x.id}}" name = "items[]" form = "form3"/></label></td>
 				<td class = 'linkrow' data-href="{% url 'CustomerData:detail' x.id %}" >{{x.first_name}}</td>
 				<td class = 'linkrow' data-href="{% url 'CustomerData:detail' x.id %}" >{{x.last_name}}</td>
 			</tr>
 			{%endfor%}
 	
 			{%for x in search_list2%}
-			<tr class = 'linkrow' data-href="{% url 'CustomerData:detail' x.id %}" style="cursor: pointer">
-				<td><input type = "checkbox" class="remove" value="{{x.id}}" name = "items[]" form = "form3"/></td>
+			<tr style="cursor: pointer">
+				<td><label><input type = "checkbox" class="remove" value="{{x.id}}" name = "items[]" form = "form3"/></label></td>
 				<td class = 'linkrow' data-href="{% url 'CustomerData:detail' x.id %}" >{{x.first_name}}</td>
 				<td class = 'linkrow' data-href="{% url 'CustomerData:detail' x.id %}" >{{x.last_name}}</td>
 			</tr>
 			{%endfor%}
 	
 			{%for x in search_list3%}
-			<tr class = 'linkrow' data-href="{% url 'CustomerData:detail' x.id %}" style="cursor: pointer">
-				<td><input type = "checkbox" class="remove" value="{{x.id}}" name = "items[]" form = "form3"/></td>
+			<tr style="cursor: pointer">
+				<td><label><input type = "checkbox" class="remove" value="{{x.id}}" name = "items[]" form = "form3"/></label></td>
 				<td class = 'linkrow' data-href="{% url 'CustomerData:detail' x.id %}" >{{x.first_name}}</td>
 				<td class = 'linkrow' data-href="{% url 'CustomerData:detail' x.id %}" >{{x.last_name}}</td>
 			</tr>
 			{%endfor%}
 	
 			{%for x in search_list4%}
-			<tr class = 'linkrow' data-href="{% url 'CustomerData:detail' x.id %}" style="cursor: pointer">
-				<td><input type = "checkbox" class="remove" value="{{x.id}}" name = "items[]" form = "form3"/></td>
+			<tr style="cursor: pointer">
+				<td><label><input type = "checkbox" class="remove" value="{{x.id}}" name = "items[]" form = "form3"/></label></td>
 				<td class = 'linkrow' data-href="{% url 'CustomerData:detail' x.id %}" >{{x.first_name}}</td>
 				<td class = 'linkrow' data-href="{% url 'CustomerData:detail' x.id %}" >{{x.last_name}}</td>
 			</tr>
@@ -113,7 +106,6 @@
 		</tbody>
 	</table>
 	</div>
-	<div class = "col-md-1">
-	</div>
+	<div class = "col-md-2"></div>
 </div>
 {% endblock %}
