--- a/CustomerData/templates/CustomerData/index.html
+++ b/CustomerData/templates/CustomerData/index.html
@@ -1,4 +1,4 @@
-{% extends 'CustomerData/base.html' %}
+{% extends 'template/template/base.html' %}
 
 {% block title %} Customer Data {% endblock %}
 
