--- a/template/template/base.html
+++ b/template/template/base.html
@@ -30,7 +30,7 @@
                  <span class="icon-bar"></span>
                  <span class="icon-bar"></span>
              </button>
-             <a class="navbar-brand" href="">Rent</a>
+             <a class="navbar-brand" href="/home">Rent</a>
          </div>
          <div class="collapse navbar-collapse">
              <ul class="nav navbar-nav">
@@ -44,6 +44,12 @@
                      <a href="">
                          <span class="glyphicon glyphicon-gift" aria-hidden="true"></span>&nbsp;
                          Asset
+                     </a>
+                 </li>
+                 <li class="">
+                     <a href="/calendar">
+                         <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>&nbsp;
+                         Calender
                      </a>
                  </li>
              </ul>
