add basic login and register feature

--- a/login/templates/login/regf.html
+++ b/login/templates/login/regf.html
@@ -21,6 +21,9 @@
                         </div>
                         </form>
                     </div>
+                    <div class="panel-footer">
+                        Existing <a href="{% url 'login:login_user' %}">Click here</a> to log in.
+                    </div>
                 </div>
             </div>
         </div>
