--- a/template/template/base.html
+++ b/template/template/base.html
@@ -60,7 +60,7 @@
              </button>
              <a class="navbar-brand" href="/home">Rent</a>
          </div>
-         <div class="collapse navbar-collapse">
+         <div class="collapse navbar-collapse" id="topNavBar">
              <ul class="nav navbar-nav">
                  <li class="">
                      <a href="{% url 'CustomerData:index' %}">
@@ -80,6 +80,11 @@
                          Calender
                      </a>
                  </li>
+                 <li>
+                    <a href="{% url 'music:logout_user' %}">
+                        <span class="glyphicon glyphicon-off" aria-hidden="true"></span>&nbsp; Logout
+                    </a>
+                </li>
              </ul>
          </div>
      </div>
