--- a/template/template/base.html
+++ b/template/template/base.html
@@ -81,7 +81,7 @@
                      </a>
                  </li>
                  <li>
-                    <a href="{% url 'music:logout_user' %}">
+                    <a href="{% url 'login:logout_user' %}">
                         <span class="glyphicon glyphicon-off" aria-hidden="true"></span>&nbsp; Logout
                     </a>
                 </li>
