--- a/template/template/base.html
+++ b/template/template/base.html
@@ -75,7 +75,7 @@
                      </a>
                  </li>
                  <li class="">
-                     <a href="/calendar">
+                     <a href="">
                          <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>&nbsp;
                          Calender
                      </a>
