--- a/CustomerData/static/CustomerData/css/stylesheet.css
+++ b/CustomerData/static/CustomerData/css/stylesheet.css
@@ -1,20 +1,28 @@
 .navbar {
 	margin-bottom: 0px;
+	border-radius: 0px;
 }
 
-div.b1, div.b2{
-	display: inline-block;
+div.bb{
+	min-height: 60%;
+	height: 100%;
+}
+div.b{
+	background-color: #FAFAFA;
+	height: 100%;
+	
+}
+
+.tablew{
+	height: 100%;
 }
 
 div.s {
 	width: 100%;
 	background-color: ;
 	padding-top: 7px;
+	padding-bottom: 10px;
 	margin-bottom: 0px;
-}
-
-div.b {
-	background-color: ;
 }
 
 hr {
@@ -26,14 +34,36 @@ hr {
 	margin-bottom: 0px;
 }
 
-th:first-child{
-	color: white;
-}
-
-div.tablew {
-	background-color: ;
-}
-
 #msg {
 	color: red;
+}
+
+td.addtable {
+	padding-right: 10px;
+	padding-top: 10px;
+	padding-bottom: 10px;
+}
+
+.modal-title {
+	color: #4DD0E1;
+}
+
+button.btn-block{
+	margin-top: 10px;
+	margin-bottom: 10px;
+}
+
+h4{
+	margin-bottom: 0px;
+	padding-bottom: 0px;
+}
+
+form.ss{
+	margin-top: 0px;
+	padding-top: 0px;
+}
+
+html, body{
+	height: 100%;
+	min-height: 100%;
 }
