--- a/login/templates/login/regf.html
+++ b/login/templates/login/regf.html
@@ -22,7 +22,7 @@
                         </form>
                     </div>
                     <div class="panel-footer">
-                        Existing <a href="{% url 'login:login_user' %}">Click here</a> to log in.
+                        Existing Employee?  <a href="{% url 'login:login_user' %}">Click here</a> to log in.
                     </div>
                 </div>
             </div>
