--- a/login/templates/login/regf.html
+++ b/login/templates/login/regf.html
@@ -1,4 +1,4 @@
-{% extends 'template/template/base.html' %}
+{% extends 'login/logbase.html' %}
 {% block title %} User Register {% endblock %}
 
 {% block body %}
