--- a/template/template/base.html
+++ b/template/template/base.html
@@ -58,7 +58,7 @@
                  <span class="icon-bar"></span>
                  <span class="icon-bar"></span>
              </button>
-             <a class="navbar-brand" href="/home">Rent</a>
+             <a class="navbar-brand" href="/calendar">Rent</a>
          </div>
          <div class="collapse navbar-collapse" id="topNavBar">
              <ul class="nav navbar-nav">
@@ -75,7 +75,7 @@
                      </a>
                  </li>
                  <li class="">
-                     <a href="">
+                     <a href="/calendar">
                          <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>&nbsp;
                          Calender
                      </a>
