--- a/login/templates/login/login.html
+++ b/login/templates/login/login.html
@@ -1,4 +1,4 @@
-{% extends 'template/template/base.html' %}
+{% extends 'login/logbase.html' %}
 {% block title %}Log In{% endblock %}
 {% block login_active %}active{% endblock %}
 
