--- a/CustomerData/static/CustomerData/css/stylesheet.css
+++ b/CustomerData/static/CustomerData/css/stylesheet.css
@@ -62,6 +62,13 @@ button.search{
 	margin-left: 10px;
 }
 
+button.edit{
+	margin-right: 10px;
+}
+button.edit, button.remove{
+	float: right;
+}
+
 h4{
 	margin-bottom: 0px;
 	padding-bottom: 0px;
