--- a/AssetData/templates/AssetData/index.html
+++ b/AssetData/templates/AssetData/index.html
@@ -1,8 +1,15 @@
-{% if allAssets %}
+<!-- Loads path to static files -->
+{% load staticfiles %}
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
+<link rel="stylesheet" type="text/css" href="{% static 'assetdata/style.css' %}" />
+
+
+<!-- Prints all of the assets out in a list -->
+{% if allAssets %} 
 	<h3>All assets: </h3>
 	<ul>
 		{% for asset in allAssets %} 
-		<li><a href="{{ asset.id }}/">{{ asset.name }}</a></li>
+			<li><a href="{% url 'AssetData:assetDetail' asset.id %}">{{ asset.name }}</a></li>
 		{% endfor %}
 	</ul>
 {% else %}
