--- a/CustomerData/templates/CustomerData/detail.html
+++ b/CustomerData/templates/CustomerData/detail.html
@@ -1,3 +1,4 @@
+<!--container for customer details' table-->
 <div class = "row container-fluid">
 	<div class = "col-md-8">
 		<table class = "table table-striped">
