--- a/template/template/base.html
+++ b/template/template/base.html
@@ -107,7 +107,7 @@
                      </a>
                  </li>
                  <li class="">
-                     <a href="">
+                     <a href="{% url 'AssetData:assetHome' %}">
                          <span class="glyphicon glyphicon-gift" aria-hidden="true"></span>&nbsp;
                          Asset
                      </a>
