--- a/AssetData/templates/AssetData/index.html
+++ b/AssetData/templates/AssetData/index.html
@@ -1,3 +1,6 @@
+{% extends 'template/template/base.html' %}
+{% block title %} {{asset.name}}  {% endblock %}
+{% block body %}
 <!-- Loads path to static files -->
 {% load staticfiles %}
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css"
@@ -15,3 +18,4 @@
 {% else %}
 	<h3>No assets registered</h3>
 {% endif %}
+{% endblock  %}
