gave calendar page a background

--- a/Calendar/templates/calendar.html
+++ b/Calendar/templates/calendar.html
@@ -16,6 +16,11 @@
 	#calendar {
 		max-width: 1024px;
 		margin: 0 auto;
+		background-color: white;
+		padding: 24px;
+	}
+	body {
+	    background-color: rgb(240,240,240);
 	}
 </style>
 {% endblock %}
