fix typo in Calender

--- a/template/template/base.html
+++ b/template/template/base.html
@@ -115,7 +115,7 @@
                  <li class="">
                      <a href="/calendar">
                          <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>&nbsp;
-                         Calender
+                         Calendar
                      </a>
                  </li>
                  <li>
