--- a/Calendar/templates/site_base.html
+++ b/Calendar/templates/site_base.html
@@ -56,7 +56,7 @@
                  <li class="">
                      <a href="/calendar">
                          <span class="glyphicon glyphicon-calendar" aria-hidden="true"></span>&nbsp;
-                         Calender
+                         Calendar
                      </a>
                  </li>
                  <li>
