auto resize calendar

--- a/Calendar/templates/calendar.html
+++ b/Calendar/templates/calendar.html
@@ -14,7 +14,7 @@
 <script type='text/javascript' src="//cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.0.1/fullcalendar.min.js"></script>
 <style>
 	#calendar {
-		max-width: 1024px;
+		max-width: 100vh;
 		margin: 0 auto;
 		background-color: white;
 		padding: 24px;
